--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,14 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --header-title-color:#DB00FF;
+  --background-color:#000028;
+  --text-background-color:#FF0070;
+  --text-title-color:#FF0070;
+  --text-subtitle-color:#FF0070;
+  --text-color:#F1B2CE;
+  --text-shadow:#FF0070;
+  --decorated-zone-color:#FF0070;
+  --text-color-des:#000028;
+  --text-link-color:#FF0070;
+  --text-header-hover:#ff007050;
 }
+
