--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,28 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --header-title-color: #FFC2E6;
+  --background-color: #FFF1F7;
+  --text-background-color: #FF8DCB;
+  --text-title-color: #FF0070;
+  --text-subtitle-color: #FF0070;
+  --text-color: #353430;
+  --text-shadow: #FF0070;
+  --decorated-zone-color: #353430;
+  --text-color-des: #353430;
+  --text-link-color: #FF8DCB;
+  --text-header-hover: #32312D50;
+
+  .header {
+    background-image: url(../images/cover-image-light.png);
+  }
+
+  .header__decoration {
+    display: none;
+  }
+
+}
+
+@media (width < 1024px) {
+  .title {
+    --text-shadow: #FF8DCB;
+  }
 }
