--- a/styles/light.css
+++ b/styles/light.css
@@ -9,16 +9,12 @@
   --decorated-zone-color: #353430;
   --text-color-des: #353430;
   --text-link-color: #FF8DCB;
-  --text-header-hover: #32312D50;
-
-  .header {
-    background-image: url(../images/cover-image-light.png);
-  }
+  --text-header-hover: rgba(50, 49, 45, 0.40);
+  background-image: url(../images/cover-image-light.png);
 
   .header__decoration {
     display: none;
   }
-
 }
 
 @media (width < 1024px) {
