--- a/styles/style.css
+++ b/styles/style.css
@@ -142,6 +142,7 @@
 /* section */
 .section__main {
   display: grid;
+  justify-content: space-between;
   grid-template-columns: 315px 650px;
   gap: 20px;
 }
